Test nginx.yaml
apiVersion : v1
kind: Pod
metadata: 
  name: web
spec:
  containers:
    - name: container-apache
      image: nginx:latest
      ports:
         - containerPort: 80
