autoscale.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: Pavel
spec:
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name : test-web
          image: pawka9494/k8sphphub
          ports:
            - containerPort: 80
