my-web-pod.yaml
apiVersion : v1
kind: Pod
metadata:
  name: my-webserver
  labels:
     env: prod
     app: main
     owner: Pavel
spec:
  containers: 
    - name: container-nginx
      image: nginx:latest
      ports:
        - containerPort: 80

    - name: container-tomcat
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
