service-loadbalancer-multipod.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-dep
  labels:
    app : k8s-deploy
spec:
  selector:
    matchLabels:
      project: one 
  template:
    metadata:
      labels: 
        project: one
    spec:
      containers:
        - name: one-web
          image: nginx:latest
          ports:
            - containerPort: 80
            
        - name: one-tomcat
          image: tomcat:8.5.38
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
    name: my-service-multi
    labels:
      owner: Pavel
spec:
  type: LoadBalancer
  selector:
    project: one 
  ports: 
     - name: app-listener
       protocol: TCP
       port: 80
       targetPort: 80

     - name: app-listener-two
       protocol: TCP
       port: 8885
       targetPort: 8080
