ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-hosts

spec:
  rules:
  - host: nginxkub.ru  #local host
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
            service:
              name: dep
              port:
                number: 81

  - host: tomcatkub.ru #local host
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
            service:
              name: dep2
              port:
                number: 8080
